@@ -1,5 +1,6 @@
 munin (work)
   * Main: fix the file vs. pipe check in munin-limits.
+  * Main: place the munin-limits lock file in rundir, not dbdir.
 
 munin (1.2.0)
 
